test/parser/bad/_custom/escape_eof.java
// This test sees if escape lookahead will fail if there is no next character.

protected class A {
    public string m() {return "\